@@ -1,3 +1,8 @@
+2009-09-01  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* cimcClientSfcbLocal.c:
+	[ 2847757 ] local cim client execQuery leak
+
 2009-08-31 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* test/ABT/ABTScript:
